Finished excercise 06-cascade-fix

--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -8,19 +8,13 @@ body {
   font-weight: 800;
 }
 
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
-}
-
 .para {
   font-size: 22px;
 }
 
-.confirm {
-  background: green;
-  color: white;
-  font-weight: bold;
+.small-para {
+  font-size: 14px;
+  font-weight: 800;
 } 
 
 .button {
@@ -28,8 +22,13 @@ body {
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
+.confirm {
+  background: green;
+  color: white;
+  font-weight: bold;
+} 
 
-.child {
+.text .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
